Added Plugins.js manifest and icon
updated
index.html

-
-
-

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Tailwind-boiler</title>
+
+    <meta name="description" content="The description goes here!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="assets/css/index.css" />
-    <title>Dunder Mifflin Paper Company</title>
   </head>
   <body class="font-sans">
     <div class="container py-8 mx-auto my-10 bg-purple-500">
-      <h1 class="text-3xl text-center text-white">
-        Dunder Mifflin Paper Company
-      </h1>
+      <h1 class="text-3xl text-center text-white">A Tailwind boiler project</h1>
       <h1 class="mt-6 text-xl text-center text-white javascript">
         The javascript is not connected
       </h1>
