--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
 
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="assets/css/index.css" />
+
+    <meta name="theme-color" content="#fafafa" />
   </head>
+
   <body class="font-sans">
     <div class="container py-8 mx-auto my-10 bg-purple-500">
       <h1 class="text-3xl text-center text-white">A Tailwind boiler project</h1>
@@ -22,6 +25,21 @@
         The javascript is not connected
       </h1>
     </div>
+    <script src="assets/js/plugins.js"></script>
     <script src="assets/js/index.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () {
+        ga.q.push(arguments);
+      };
+      ga.q = [];
+      ga.l = +new Date();
+      ga("create", "UA-XXXXX-Y", "auto");
+      ga("set", "anonymizeIp", true);
+      ga("set", "transport", "beacon");
+      ga("send", "pageview");
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
   </body>
 </html>
