Remove Removed the unessesary purge config
-
-
-

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <body class="font-sans">
     <div class="container py-8 mx-auto my-10 bg-purple-500">
       <h1 class="text-3xl text-center text-white">A Tailwind boiler project</h1>
-      <h1 class="mt-6 text-xl text-center text-white javascript">
+      <h1 class="mt-6 text-xl text-center text-yellow-300 javascript">
         The javascript is not connected
       </h1>
     </div>
