Fixed - Build and server got an error after last commit, updated to parcel v2
Updated
- Name of webmanifest

-
-
-

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" href="assets/css/index.css" />
 
     <meta name="theme-color" content="#fafafa" />
@@ -20,7 +20,6 @@
 
   <body class="font-sans">
     <!-- Delete this section to start for scratch! -->
-    <a href="/src/about.html">About</a>
     <section class="py-12 overflow-hidden md:py-20 lg:py-24">
       <div class="relative px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
         <div class="relative">
