--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <div
             class="max-w-3xl mx-auto text-2xl font-medium leading-9 text-center text-gray-900"
           >
-            <p>The tailwind boiler is ready be to used!</p>
+            <p>The tailwind boiler is ready to be to used!</p>
           </div>
           <footer class="mt-8">
             <div class="md:flex md:items-center md:justify-center">
